Made changes to prevent too long numbers from stretching the display

--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,9 @@ body {
     color: #a05019;
     padding: 0.75rem 1rem;
     text-align: right;
-    font-size: calc(1rem * 1.2 * 1.2);
+    font-size: calc(1rem * 1 * 1);
 
+    min-height: 3em;
 }
 
 .calculator__keys {
